@@ -119,6 +119,8 @@ A <a href="http://developer.gnome.org/gtk/2.24/GtkButton.html">GtkButton</a> con
 <tr><td class="wiki"> space-expand </td><td class="wiki"> Pack widget expanding into space </td><td class="wiki"> <code>true</code> or <code>false</code> </td><td class="wiki"> 0.7.21 </td></tr>
 <tr><td class="wiki"> space-fill </td><td class="wiki"> Pack widget filling space </td><td class="wiki"> <code>true</code> or <code>false</code> </td><td class="wiki"> 0.7.21 </td></tr>
 <tr><td class="wiki"> block-function-signals </td><td class="wiki"> Block signal emissions from functions </td><td class="wiki"> <code>true</code> or <code>false</code> </td><td class="wiki"> 0.7.21 </td></tr>
+<tr><td class="wiki"> file-monitor </td><td class="wiki"> Monitor input file(s) for changes </td><td class="wiki"> <code>true</code> or <code>false</code> </td><td class="wiki"> 0.8.1 </td></tr>
+<tr><td class="wiki"> rate-limit </td><td class="wiki"> The file monitor limit in milliseconds </td><td class="wiki"> An integer &gt;= <code>10</code> </td><td class="wiki"> 0.8.1 </td></tr>
 <tr><td class="wiki"> image-position<sup><a href="#note1">[1]</a></sup> </td><td class="wiki"> Image position relative to label </td><td class="wiki"> <code>0</code>, <code>1</code>, <code>2</code>, <code>3</code> (left, right, top, bottom) </td><td class="wiki"> 0.7.21 </td></tr>
 <tr><td class="wiki"> homogeneous<sup><a href="#note2">[2]</a></sup> </td><td class="wiki"> Horizontal uniformity of an image with label </td><td class="wiki"> <code>true</code> or <code>false</code> </td><td class="wiki"> 0.8.1 </td></tr>
 <tr><td class="wiki"> theme-icon-size </td><td class="wiki"> The size of the GTK theme icon </td><td class="wiki"> An integer &gt; <code>0</code> or <code>-1</code> to ignore </td><td class="wiki"> 0.8.1 </td></tr>
@@ -150,8 +152,10 @@ A <a href="http://developer.gnome.org/gtk/2.24/GtkButton.html">GtkButton</a> con
 
 <p>The default signal is "<a href="http://developer.gnome.org/gtk/2.24/GtkButton.html#GtkButton-clicked">clicked</a>", emitted when the button has been activated (pressed and released).</p>
 
+<p>The "file-changed" signal is emitted if file-monitor is true and the input file being monitored has changed.</p>
+
 <p>The following GtkWidget signals are connected-up for all widgets:</p>
-<p>"<a href="http://developer.gnome.org/gtk/2.24/GtkWidget.html#GtkWidget-button-press-event">button-press-event</a>", "<a href="http://developer.gnome.org/gtk/2.24/GtkWidget.html#GtkWidget-button-release-event">button-release-event</a>", "<a href="http://developer.gnome.org/gtk/2.24/GtkWidget.html#GtkWidget-configure-event">configure-event</a>", "<a href="http://developer.gnome.org/gtk/2.24/GtkWidget.html#GtkWidget-enter-notify-event">enter-notify-event</a>", "<a href="http://developer.gnome.org/gtk/2.24/GtkWidget.html#GtkWidget-leave-notify-event">leave-notify-event</a>", "<a href="http://developer.gnome.org/gtk/2.24/GtkWidget.html#GtkWidget-focus-in-event">focus-in-event</a>", "<a href="http://developer.gnome.org/gtk/2.24/GtkWidget.html#GtkWidget-focus-out-event">focus-out-event</a>", "<a href="http://developer.gnome.org/gtk/2.24/GtkWidget.html#GtkWidget-hide">hide</a>", "<a href="http://developer.gnome.org/gtk/2.24/GtkWidget.html#GtkWidget-show">show</a>", "<a href="http://developer.gnome.org/gtk/2.24/GtkWidget.html#GtkWidget-key-press-event">key-press-event</a>", "<a href="http://developer.gnome.org/gtk/2.24/GtkWidget.html#GtkWidget-key-release-event">key-release-event</a>", "<a href="http://developer.gnome.org/gtk/2.24/GtkWidget.html#GtkWidget-map-event">map-event</a>", "<a href="http://developer.gnome.org/gtk/2.24/GtkWidget.html#GtkWidget-unmap-event">unmap-event</a>"</p>
+<a href="http://developer.gnome.org/gtk/2.24/GtkWidget.html#GtkWidget-button-press-event">button-press-event</a>, <a href="http://developer.gnome.org/gtk/2.24/GtkWidget.html#GtkWidget-button-release-event">button-release-event</a>, <a href="http://developer.gnome.org/gtk/2.24/GtkWidget.html#GtkWidget-configure-event">configure-event</a>, <a href="http://developer.gnome.org/gtk/2.24/GtkWidget.html#GtkWidget-enter-notify-event">enter-notify-event</a>, <a href="http://developer.gnome.org/gtk/2.24/GtkWidget.html#GtkWidget-leave-notify-event">leave-notify-event</a>, <a href="http://developer.gnome.org/gtk/2.24/GtkWidget.html#GtkWidget-focus-in-event">focus-in-event</a>, <a href="http://developer.gnome.org/gtk/2.24/GtkWidget.html#GtkWidget-focus-out-event">focus-out-event</a>, <a href="http://developer.gnome.org/gtk/2.24/GtkWidget.html#GtkWidget-hide">hide</a>, <a href="http://developer.gnome.org/gtk/2.24/GtkWidget.html#GtkWidget-show">show</a>, <a href="http://developer.gnome.org/gtk/2.24/GtkWidget.html#GtkWidget-key-press-event">key-press-event</a>, <a href="http://developer.gnome.org/gtk/2.24/GtkWidget.html#GtkWidget-key-release-event">key-release-event</a>, <a href="http://developer.gnome.org/gtk/2.24/GtkWidget.html#GtkWidget-map-event">map-event</a>, <a href="http://developer.gnome.org/gtk/2.24/GtkWidget.html#GtkWidget-unmap-event">unmap-event</a>
 
 <h2> Functions </h2>
 
@@ -237,7 +241,7 @@ A <a href="http://developer.gnome.org/gtk/2.24/GtkButton.html">GtkButton</a> con
 						<td>
 							<table width="100%" cellpadding="0px" cellspacing="0px">
 								<tr>
-									<td class="footer" width="33%" align="center">2012-09-13 <a href="mailto:thunorsif@hotmail.com">Thunor</a></td>
+									<td class="footer" width="33%" align="center">2012-09-16 <a href="mailto:thunorsif@hotmail.com">Thunor</a></td>
 									<td class="footer" width="33%" align="center"><a href="http://code.google.com/p/gtkdialog/">Project Page</a></td>
 									<td class="footer" width="33%" align="center"><a href="http://www.murga-linux.com/puppy/viewtopic.php?t=69188">Development Thread</a></td>
 								</tr>
